--- a/admin/package.json
+++ b/admin/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
     "element-ui": "^2.4.5",
+    "express": "^5.0.0-alpha.8",
+    "mongoose": "^5.9.23",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
