--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,8 @@
     "express": "^5.0.0-alpha.8",
     "mongoose": "^5.9.23",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
